tests/paczka1/fuzzy1/11765426.err
Error in line 3: S336 A698 62,2
Error in line 13: ftEyM53da S336 48,6
Error in line 14: nwcKfT S336 66,8
